[package]
name = "macroquad_breakout_juicing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "./game" }
game_context = { path = "./game_context" }
macroquad = "0.4.5"
# macroquad = { version = "0.4.5", path = "../macroquad" }
